# napari-scripts

./: MANIFEST.in  README.md  pyproject.toml
napari_scripts/: __init__.py  analysis_steps.py  fluorophore_list.json  image_layers.py  rotate_embryo.py
scripts/: eve_quantification.py  templates.py
scripts/20231208-cq-nkx6-with-eve-stains/: count_cells.py  count_cells25c.py  count_cells31c.py
